--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "type": "git",
     "url": "git+https://github.com/conan9191/House-Finder-Project.git"
   },
-  "author": "syed mahvish",
+  "author": "syed mahvish, Ishaan Patel",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/conan9191/House-Finder-Project/issues"
@@ -19,6 +19,8 @@
   "homepage": "https://github.com/conan9191/House-Finder-Project#readme",
   "dependencies": {
     "express": "^4.17.1",
+    "express-handlebars": "^5.1.0",
+    "handlebars": "^4.7.6",
     "is-image-url": "^1.1.8",
     "moment": "^2.27.0",
     "mongodb": "^3.6.0",
