--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "@khanacademy/tota11y": "^0.2.0",
     "bcryptjs": "^2.4.3",
+    "body-parser": "^1.19.0",
     "bootstrap": "^4.4.1",
     "chart.js": "^2.9.3",
     "cookie-parser": "^1.4.5",
@@ -16,12 +17,12 @@
     "express": "~4.17.1",
     "express-handlebars": "^5.1.0",
     "express-session": "^1.17.1",
+    "handlebars": "4.7.6",
     "http-errors": "^1.6.3",
     "mongodb": "^3.6.0",
-    "handlebars": "4.7.6",
     "morgan": "~1.9.1",
-    "xss": "^1.0.6",
-    "uuid": "8.3.0"
+    "uuid": "8.3.0",
+    "xss": "^1.0.6"
   },
   "keywords": [],
   "author": "",
