--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "This is our final project for cs546",
   "main": "app.js",
   "scripts": {
+    "seed": "node ./tasks/seed.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node app.js"
   },
